# ndvi_cal

./: CMakeLists.txt  CMakePresets.json  darkdark.py  full_main.cpp  main.cpp
